2001-02-19  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* aux/macros/check_fs_mntent.m4 (ac_safe): remove debugging "echo"
	command.

2001-02-18  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* aux/macros/mount_headers.m4, include/mount_headers[12].h: split
	mount_headers.h in two because one relative header (nfs_prot.h)
	file cannot be included inside another from the start directory of
	the first (it's relative to the directory of the first).

2001-02-09  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* AUTHORS: added Ahmon Dancy <dancy@franz.com>

	* (all): added Darwin/Rhapsody/Apple OS X support from Ahmon Dancy

	* aux/macros/mount_headers.m4: moved all the C code into a
	separate file, include/mount_headers.h; the effect is that
	configure goes down in size by a factor of 2.5!

	* include/mount_headers.h: new file, with C code from
	aux/macros/mount_headers.m4

2001-02-01  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* conf/mount/mount_linux.c: made linux_nfs_error() more robust.

2001-02-01  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* released snapshot am-utils-6.1a2

	* updated ltmain.sh and ltconfig from latest stable version of
	libtool-1.3.5

2001-02-01  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* conf/nfs_prot/nfs_prot_linux.h (nfs_error): moved the definition
	of nfs_error here, from mount_linux.c, so that it can actually be
	used.

	* conf/mount/mount_linux.c: added unused errno 41 to the
	nfs_errormap array, lest the following errno's get shifted up by
	one!

Sat Jan 13 00:04:38 2001  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* amd/amd.h (autofs_lookuppn): Fixup whitespace.
	* amd/amfs_auto.c (amfs_auto_bgmount): Likewise.
	* amd/amfs_error.c: (amfs_error_match): Likewise.
	* amd/amfs_host.c (fetch_fhandle): Fixup whitespace.  Remove
	unnecessary temporary variable.
	* amd/info_file.c (read_line): Likewise.
	(search_or_reload_file): Likewise.
	* amd/info_ldap.c (get_ldap_timestamp): Likewise.
	* amd/map.c (get_root_ap): Likewise.